Shuffled a couple of performance test cases around.